[metadata]
name = wind-tunnel
version = 0.2.6
description = Wind Tunnel simualtions with OpenFOAM and Inductiva API
long_description = file: README.md
long_description_content_type = text/markdown
author = Inductiva Research Labs
author_email = contact@inductiva.ai
url = https://github.com/inductiva/wind-tunnel
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = 
  absl-py
  inductiva
  numpy
  pyvista
  trimesh
  vtk

[options.package_data]
wind-tunnel = templates/**

[options.packages.find]
exclude =
  tests
  tests.*

